# Science

./: .gitignore  AGENTS.md  README.md  llms.txt  pyproject.toml  science-framework.yaml
docs/: INDEX.md
schemas/: campaign.schema.json  execution-envelope.schema.json  experiment.schema.json  handoff.schema.json  run.schema.json  subject-packet-set.schema.json  trusted-attestation-receipt.schema.json
science_repo/: __init__.py  benchmark.py  campaign.py  cli.py  closure.py  cohort.py  cohort_freeze.py  contracts.py  coordinator.py  dispatch.py  doctor.py  environment.py  execution_adapter.py  handoff.py  harness_receipt.py  io.py  lifecycle.py  lineage.py  local_dispatch_acceptance.py  migration.py  migration_apply.py  models.py  platform_matrix.py  release.py  reproduce.py  review.py  review_plugins.py  runner.py  scheduler.py  study_verification.py  subject_packets.py  task_runtime.py  trusted_attestation.py  validate.py  workspace.py
scripts/: check_docs.py  refresh_registry.py  verify_distribution.py
tests/: test_benchmark.py  test_campaign.py  test_campaign_generated_outputs.py  test_cli_orchestration.py  test_closure.py  test_cohort.py  test_cohort_freeze.py  test_contracts.py  test_coordinator.py  test_coordinator_hardening.py  test_dispatch.py  test_distribution.py  test_distribution_release.py  test_doctor.py  test_environment.py  test_environment_hardening.py  test_execution_adapter.py  test_full_contracts.py  test_handoff.py  test_harness_receipt.py  test_lifecycle.py  test_lineage.py  test_lineage_review.py  test_local_dispatch_acceptance.py  test_migration.py  test_migration_apply.py  test_models.py  test_onboarding_analysis.py  test_platform_matrix.py  test_provenance.py  test_record_resilience.py  test_release.py  test_reproduce.py  test_review_integration.py  test_review_plugins.py  (+8 more)
(+207 files in other folders)
