[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "science-workbench"
version = "0.2.0.dev0"
description = "Agent-friendly, auditable scientific experiment workbench"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "jsonschema>=4.21"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
science = "science_repo.cli:main"

[tool.setuptools.packages.find]
include = ["science_repo*"]

[tool.setuptools.package-data]
science_repo = [
  "assets/**/*",
  # Setuptools' recursive glob does not traverse dot-directories.
  "assets/project/.agents/skills/run-experiment/SKILL.md",
  # Keep otherwise-empty generated-project and experiment directories real.
  "assets/project/*/.gitkeep",
  "assets/experiment/*/.gitkeep",
  "assets/experiment/data/*/.gitkeep",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
norecursedirs = ["pytest-*", ".*"]

[tool.ruff]
line-length = 100
target-version = "py311"
